shift loader to center of screen, adjust font sizes, solve quiz image lag

--- a/website/app.css
+++ b/website/app.css
@@ -24,7 +24,7 @@ h2 {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
     margin-top: 5rem;
     color: rgb(0, 0, 0);
     text-align: center;
@@ -35,7 +35,7 @@ h1 > span {
 }
 
 h2 {
-    font-size: 3.1rem;
+    font-size: 2.9rem;
     color: rgb(0, 0, 0);
     margin-bottom: 1rem;
     margin-top: 1rem;
@@ -57,7 +57,7 @@ h2 {
 }
 
 .container > * {
-    width: 90%;
+    width: 80%;
 }
 
 .flex-column {
@@ -84,14 +84,23 @@ h2 {
     width: 12rem;
     height: 12rem;
     animation: spin 1.5s linear infinite;
-    display: flex;
-    margin: auto;
-    margin-top: 2rem;
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+
+#loaderContainer {
+    position: fixed; /* Stay fixed on the screen */
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -113,7 +122,7 @@ h2 {
 /* buttons */
 
 .button {
-    font-size: 3rem;
+    font-size: 2.2rem;
     padding: 1rem 0;
     width: 20rem;
     text-align: center;
