--- a/website/quiz.css
+++ b/website/quiz.css
@@ -17,7 +17,7 @@ img {
     /* display: flex; */
     margin-top: 0.5rem;
     width: 90%;
-    font-size: 2.4rem;
+    font-size: 2rem;
     text-align: center;
 }
 
